k8s/keycloak/deployment.yaml
# Copyright 2025 KDex Tech
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.1
        args:
          - start-dev
          - --import-realm
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 2000m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /health/live
            port: 9000
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 9000
          initialDelaySeconds: 20
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /health/started
            port: 9000
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 20
        volumeMounts:
        - name: keycloak-config
          mountPath: /opt/keycloak/data/import/realm.json
          subPath: realm.json
          readOnly: true
        - name: keycloak-data-pvc
          mountPath: /opt/jboss/keycloak/standalone/data
      volumes:
      - name: keycloak-config
        configMap:
          name: keycloak-config
      - name: keycloak-data-pvc
        persistentVolumeClaim:
          claimName: keycloak-data-pvc
