k8s/keycloak/ingress.yaml
# Copyright 2025 KDex Tech
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  rules:
  - host: keycloak.docker.localhost  # Replace with your domain
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: keycloak
            port:
              name: http
  # tls:
  # - hosts:
  #   - proxy.kdex.dev  # Replace with your domain
  #   secretName: kdex-proxy-tls  # Replace with your TLS secret name
